--- a/home.html
+++ b/home.html
@@ -31,59 +31,59 @@
 <div class="row">
   <div class="column">
     <div class="content">
-      <a href="ChinoAmobi-html/index.html">
-      <img src="chino-title.jpg" style="width:100%">
-      <h3>友情 EROICA | CHINO AMOBI 「艺术访谈」</h3>
-      <p class="chinese">Chino Amobi Is a multimedia artists who combines art, painting, design, music, writing, and film with a rich assemblage of styles and voices.Amobi is a co-founder of the independent record label NON Worldwide and creative director of EROICA...▷▷▷▷</p></a>
+      <a href="suyu-html/index.html">
+      <img src="suyu-title.jpg" style="width:100%">
+      <h3>当代首饰的可持续发展 | 陈素雨 Suyu Chen「艺术访谈」</h3>
+      <p class="chinese">陈素雨 Suyu Chen<br>
+      Suyu Chen, born in Guangzhou, graduated from Guangzhou Academy of Fine Arts with a bachelor's degree and from the Department of Metalworking and Jewelry of Rochester Institute of Technology with a master's degree...▷▷▷▷</p></a>
     </div>
   </div>
   <div class="column">
     <div class="content">
-    <a href="SorinStudio-html/index.html">
-    <img src="sorin-title.jpg" style="width:100%">
-      <h3>雅痞艺术+SOARIN STUDIO | 关于西装，也许你一无所知 「艺术访谈」</h3>
-      <p class="chinese">"Retro is a kind of mark, constantly reappearing, but forgets the essence of retro: discontent with reality.The future recast from the past and the present. Restoring ancient ways, remolding from the old times and the new century.Break the old ways with the old ways.To discover, to deny, to reconstruct.The accumulation of history is profound in restoring ancient ways, and the creation of the future is bursting out in restoring ancient ways.So that's SOARIN."▷▷▷▷</p></a>
+      <a href="merani-html/index.html">
+      <img src="merani-title.jpg" style="width:100%">
+      <h3>平衡与失衡的艺术 | Merani Schilcher 「艺术访谈」</h3>
+      <p class="chinese">Merani Schilcher<br>
+      Merani Schilcher is a media artist and designer with a passion for the internet, machines and experiments from Berlin. Human characteristics in technology and how we as humans are currently using and connecting with is a large focus of hers...▷▷▷▷</p></a>
     </div>
   </div>
   <div class="row">
   <div class="column">
     <div class="content">
-      <a href="xuewu-html/index.html">
-    <img src="xuewu-title.jpg" style="width:100%">
-      <h3>对话禅修艺术 | 郑学武 ZHENG XUEWU 「艺术访谈」</h3>
-      <p class="chinese">Artist/International art curator.
-      Born in HeiLongJiang（黑龙江） Agricultural Reclamation Construction Corps. He studied in the Department of Fine Arts at Harbin Normal University and the Department of Printmaking at the State University of New York, School of Fine Arts. Zheng Xuewu also is a visiting professor at Appalachian State University and the University of North Carolina, USA; visiting scholar at Columbia University, Parsons, Vassar College, and Cork University in Ireland...▷▷▷▷
-     </p></a>
+      <a href="lois-html/index.html">
+      <img src="lois-title.jpg" style="width:100%">
+      <h3>信息拼贴带来的真实与虚幻 | Lois Notebaart 「艺术访谈」</h3>
+      <p class="chinese">Lois Notebaart<br>
+      My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up. Currently based in Amsterdam, The Netherlands. I have attended the Academy of Photography in Amsterdam and completed my bachelor of arts there...▷▷▷▷</p></a>
     </div>
   </div>
   <div class="column">
     <div class="content">
-    <a href="eric-html/index.html">
-    <img src="eric-title.jpg" style="width:100%">
-      <h3>出生在内心的怪兽 | ERIC MILLIKIN 「艺术访谈」</h3>
-      <p class="chinese"> Conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a mobile home in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress.
-      The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy... ▷▷▷▷</p></a>
+      <a href="deniz-html/index.html">
+      <img src="deniz-title.jpg" style="width:100%">
+      <h3>重叠交错的平面与潜意识 | Deniz Kazma 「艺术访谈」</h3>
+      <p class="chinese">Deniz Kazma<br>
+       Deniz Kazma is a Turkish, Belgian artist based in Brussels. She received her MFA in graphic design in Istanbul, this training and being able to work as a design professional for many years helped her use her intuitions and develop her skills as a self-taught artist.▷▷▷▷</p></a>
     </div>
     </div>
    </div>
    <div class="row">
      <div class="column">
        <div class="content">
-         <a href="shiyouzhong-html/index.html">
-         <img src="youzhong-title.jpg" style="width:100%">
-         <h3>明暗之间看见色彩 | 施又中 SHI YOUZHONG 「艺术访谈」</h3>
-         <p class="chinese">She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. ▷▷▷▷</p></a>
+         <a href="wenjing-html/index.html">
+         <img src="slide05.jpg" style="width:100%">
+         <h3>聊聊艺术的“那几个点” | 周雯静 「艺术访谈」</h3>
+         <p class="chinese">Wenjing 周雯静<br>
+          Wenjing Zhou, born in HuNan, graduated from School Fine Arts De Nantes Saint-Nazaire. She worked and lived in Paris and Beijing. Her works exhibited at Gallery Ovision at Paris in France, Heduoling art gallery in Chengdu, Today art museum in Beijing, PyeongChang Olympic Media Art project in Korea, Asia Scene Art Space in Beijing. ▷▷▷▷</p></a>
        </div>
      </div>
      <div class="column">
        <div class="content">
-         <a href="zhengluoyu-html/index.html">
-         <img src="luoyu-title.jpg" style="width:100%">
-         <h3>❀ 八月特刊 / Special Topic ❀<br>
-           八月夏天，治愈音符 | 郑洛宇 Zheng Luoyu</h3>
-         <p class="chinese"> Hello, everyone. My name is Zheng Luoyu
-          I was born in a musical family. Influenced by my father since childhood, I began to play the violin in kindergarten. At present, I am good at piano, drum set, guitar, singing and creation. It is also because of the early contact with music, I have been inspired to create since childhood, like to write songs.
-          My songwriting has no great purpose, but I simply want to use music, singing and creation to express the current emotional state. ▷▷▷▷</p></a>
+         <a href="pixy-html/index.html">
+         <img src="pixyliao-05.jpg" style="width:100%">
+         <h3>什么？神仙爱情？| Pixy Liao 「艺术访谈」</h3>
+         <p class="chinese">Pixy Liao 廖逸君<br>
+          Pixy Liao. Born and raised in Shanghai, China, Pixy Liao is an artist currently resides in Brooklyn, NY. Her long-term photographic project, “Experimental Relationships”, challenges traditional notions of gender. Femininity is also the subject of her other photographs and sculptures...▷▷▷▷</p></a>
        </div>
      </div>
    </div>
@@ -197,49 +197,62 @@
  </div>
  <div class="column">
    <div class="content">
-     <a href="pixy-html/index.html">
-     <img src="pixyliao-05.jpg" style="width:100%">
-     <h3>什么？神仙爱情？| Pixy Liao 「艺术访谈」</h3>
-     <p class="chinese">Pixy Liao 廖逸君<br>
-      Pixy Liao. Born and raised in Shanghai, China, Pixy Liao is an artist currently resides in Brooklyn, NY. Her long-term photographic project, “Experimental Relationships”, challenges traditional notions of gender. Femininity is also the subject of her other photographs and sculptures...▷▷▷▷</p></a>
+     <a href="zhengluoyu-html/index.html">
+     <img src="luoyu-title.jpg" style="width:100%">
+     <h3>❀ 八月特刊 / Special Topic ❀<br>
+       八月夏天，治愈音符 | 郑洛宇 Zheng Luoyu</h3>
+     <p class="chinese"> Hello, everyone. My name is Zheng Luoyu
+      I was born in a musical family. Influenced by my father since childhood, I began to play the violin in kindergarten. At present, I am good at piano, drum set, guitar, singing and creation. It is also because of the early contact with music, I have been inspired to create since childhood, like to write songs.
+      My songwriting has no great purpose, but I simply want to use music, singing and creation to express the current emotional state. ▷▷▷▷</p></a>
    </div>
  </div>
  <div class="column">
    <div class="content">
-     <a href="wenjing-html/index.html">
-     <img src="slide05.jpg" style="width:100%">
-     <h3>聊聊艺术的“那几个点” | 周雯静 「艺术访谈」</h3>
-     <p class="chinese">Wenjing 周雯静<br>
-      Wenjing Zhou, born in HuNan, graduated from School Fine Arts De Nantes Saint-Nazaire. She worked and lived in Paris and Beijing. Her works exhibited at Gallery Ovision at Paris in France, Heduoling art gallery in Chengdu, Today art museum in Beijing, PyeongChang Olympic Media Art project in Korea, Asia Scene Art Space in Beijing. ▷▷▷▷</p></a>
+     <a href="shiyouzhong-html/index.html">
+     <img src="youzhong-title.jpg" style="width:100%">
+     <h3>明暗之间看见色彩 | 施又中 SHI YOUZHONG 「艺术访谈」</h3>
+     <p class="chinese">She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. ▷▷▷▷</p></a>
    </div>
  </div>
  <div class="column">
    <div class="content">
-     <a href="deniz-html/index.html">
-     <img src="deniz-title.jpg" style="width:100%">
-     <h3>重叠交错的平面与潜意识 | Deniz Kazma 「艺术访谈」</h3>
-     <p class="chinese">Deniz Kazma<br>
-      Deniz Kazma is a Turkish, Belgian artist based in Brussels. She received her MFA in graphic design in Istanbul, this training and being able to work as a design professional for many years helped her use her intuitions and develop her skills as a self-taught artist.▷▷▷▷</p></a>
+   <a href="eric-html/index.html">
+   <img src="eric-title.jpg" style="width:100%">
+     <h3>出生在内心的怪兽 | ERIC MILLIKIN 「艺术访谈」</h3>
+     <p class="chinese"> Conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a mobile home in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress.
+     The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy... ▷▷▷▷</p></a>
    </div>
  </div>
 </div>
 <div class="row">
 <div class="column">
   <div class="content">
-    <a href="lois-html/index.html">
-    <img src="lois-title.jpg" style="width:100%">
-    <h3>信息拼贴带来的真实与虚幻 | Lois Notebaart 「艺术访谈」</h3>
-    <p class="chinese">Lois Notebaart<br>
-    My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up. Currently based in Amsterdam, The Netherlands. I have attended the Academy of Photography in Amsterdam and completed my bachelor of arts there...▷▷▷▷</p></a>
+    <a href="xuewu-html/index.html">
+  <img src="xuewu-title.jpg" style="width:100%">
+    <h3>对话禅修艺术 | 郑学武 ZHENG XUEWU 「艺术访谈」</h3>
+    <p class="chinese">Artist/International art curator.
+    Born in HeiLongJiang（黑龙江） Agricultural Reclamation Construction Corps. He studied in the Department of Fine Arts at Harbin Normal University and the Department of Printmaking at the State University of New York, School of Fine Arts. Zheng Xuewu also is a visiting professor at Appalachian State University and the University of North Carolina, USA; visiting scholar at Columbia University, Parsons, Vassar College, and Cork University in Ireland...▷▷▷▷
+   </p></a>
   </div>
 </div>
 <div class="column">
   <div class="content">
-    <a href="merani-html/index.html">
-    <img src="merani-title.jpg" style="width:100%">
-    <h3>平衡与失衡的艺术 | Merani Schilcher 「艺术访谈」</h3>
-    <p class="chinese">Merani Schilcher<br>
-    Merani Schilcher is a media artist and designer with a passion for the internet, machines and experiments from Berlin. Human characteristics in technology and how we as humans are currently using and connecting with is a large focus of hers...▷▷▷▷</p></a>
+  <a href="SorinStudio-html/index.html">
+  <img src="sorin-title.jpg" style="width:100%">
+    <h3>雅痞艺术+SOARIN STUDIO | 关于西装，也许你一无所知 「艺术访谈」</h3>
+    <p class="chinese">"Retro is a kind of mark, constantly reappearing, but forgets the essence of retro: discontent with reality.The future recast from the past and the present. Restoring ancient ways, remolding from the old times and the new century.Break the old ways with the old ways.To discover, to deny, to reconstruct.The accumulation of history is profound in restoring ancient ways, and the creation of the future is bursting out in restoring ancient ways.So that's SOARIN."▷▷▷▷</p></a>
+  </div>
+</div>
+</div>
+
+
+<div class="row">
+<div class="column">
+  <div class="content">
+    <a href="ChinoAmobi-html/index.html">
+    <img src="chino-title.jpg" style="width:100%">
+    <h3>友情 EROICA | CHINO AMOBI 「艺术访谈」</h3>
+    <p class="chinese">Chino Amobi Is a multimedia artists who combines art, painting, design, music, writing, and film with a rich assemblage of styles and voices.Amobi is a co-founder of the independent record label NON Worldwide and creative director of EROICA...▷▷▷▷</p></a>
   </div>
 </div>
 </div>
