--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -146,6 +146,11 @@
 <img class="titlelogo" src="merani-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="suyu-flower.gif">
+</div>
+</div>
 
 </div>
 
