--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
 <div class="row">
   <div class="column">
     <div class="content">
+      <a href="jiyu-html/index.html">
+      <img src="jiyu-title.jpg" style="width:100%">
+      <h3>她把世界定址在了陶瓷上 | Jiyu An 「艺术访谈」</h3>
+      <p class="chinese">Jiyu An<br>
+      Jiyu works an interactive ceramic sculptor. An was born in Korea and completed An’s a ceramic bachelor's degree at Kook- min University (Korea, Seoul). She is an MFA candidate for SUNY New Paltz, Ceramics...▷▷▷▷</p></a>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
       <a href="suyu-html/index.html">
       <img src="suyu-title.jpg" style="width:100%">
       <h3>当代首饰的可持续发展 | 陈素雨 Suyu Chen「艺术访谈」</h3>
@@ -38,6 +47,7 @@
       Suyu Chen, born in Guangzhou, graduated from Guangzhou Academy of Fine Arts with a bachelor's degree and from the Department of Metalworking and Jewelry of Rochester Institute of Technology with a master's degree...▷▷▷▷</p></a>
     </div>
   </div>
+  <div class="row">
   <div class="column">
     <div class="content">
       <a href="merani-html/index.html">
@@ -47,16 +57,17 @@
       Merani Schilcher is a media artist and designer with a passion for the internet, machines and experiments from Berlin. Human characteristics in technology and how we as humans are currently using and connecting with is a large focus of hers...▷▷▷▷</p></a>
     </div>
   </div>
-  <div class="row">
   <div class="column">
     <div class="content">
       <a href="lois-html/index.html">
       <img src="lois-title.jpg" style="width:100%">
       <h3>信息拼贴带来的真实与虚幻 | Lois Notebaart 「艺术访谈」</h3>
       <p class="chinese">Lois Notebaart<br>
-      My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up. Currently based in Amsterdam, The Netherlands. I have attended the Academy of Photography in Amsterdam and completed my bachelor of arts there...▷▷▷▷</p></a>
+      My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up. Currently based in Amsterdam, The Netherlands...▷▷▷▷</p></a>
     </div>
   </div>
+  </div>
+    <div class="row">
   <div class="column">
     <div class="content">
       <a href="deniz-html/index.html">
@@ -66,8 +77,6 @@
        Deniz Kazma is a Turkish, Belgian artist based in Brussels. She received her MFA in graphic design in Istanbul, this training and being able to work as a design professional for many years helped her use her intuitions and develop her skills as a self-taught artist.▷▷▷▷</p></a>
     </div>
     </div>
-   </div>
-   <div class="row">
      <div class="column">
        <div class="content">
          <a href="wenjing-html/index.html">
@@ -77,6 +86,8 @@
           Wenjing Zhou, born in HuNan, graduated from School Fine Arts De Nantes Saint-Nazaire. She worked and lived in Paris and Beijing. Her works exhibited at Gallery Ovision at Paris in France, Heduoling art gallery in Chengdu, Today art museum in Beijing, PyeongChang Olympic Media Art project in Korea, Asia Scene Art Space in Beijing. ▷▷▷▷</p></a>
        </div>
      </div>
+        </div>
+        <div class="row">
      <div class="column">
        <div class="content">
          <a href="pixy-html/index.html">
@@ -86,8 +97,7 @@
           Pixy Liao. Born and raised in Shanghai, China, Pixy Liao is an artist currently resides in Brooklyn, NY. Her long-term photographic project, “Experimental Relationships”, challenges traditional notions of gender. Femininity is also the subject of her other photographs and sculptures...▷▷▷▷</p></a>
        </div>
      </div>
-   </div>
-   <div class="row">
+
      <div class="column">
        <div class="content">
          <a href="liulight-html/index.html">
@@ -96,6 +106,8 @@
          <p class="chinese">Liu Light 刘亮 is an artist, writer, and musician based in New York. They create a wide variety of interrelated work, including motion paintings, illustrations, poetry, art books, songs, and performance. Light is interested in creating a language / reality / world that they can exist in, exploring and reshaping the boundaries and grey areas between lived experience, dream, romance, body, self, and fantasy. ▷▷▷▷</p></a>
        </div>
      </div>
+        </div>
+        <div class="row">
      <div class="column">
        <div class="content">
          <a href="cyriakharris-html/index.html">
@@ -105,8 +117,6 @@
          <p class="chinese">Cyriak Harris is a British artist best known for his surreal animations using photo and video montage, which he began spreading on the internet in 2004. He has since built a career as a freelance animator, working on commercials, TV shows, and music videos, and has a YouTube following of over a million subscribers. He currently lives in Lincolnshire for no apparent reason. ▷▷▷▷</p></a>
        </div>
      </div>
-   </div>
-   <div class="row">
      <div class="column">
        <div class="content">
          <a href="digbi-html/index.html">
@@ -115,6 +125,8 @@
          <p class="chinese">Digbijayee Khatua received a Master’s degree in Fine Arts in 2015 from the College of Art, Delhi University, New Delhi, and a Bachelor’s degree in Visual Arts in 2012 from B. K. College of Art and Crafts, Bhubaneshwar, Odisha and...▷▷▷▷</p></a>
        </div>
      </div>
+        </div>
+        <div class="row">
      <div class="column">
        <div class="content">
          <a href="huayiwenxin-html/index.html">
@@ -123,8 +135,6 @@
          <p class="chinese">Painting group exhibition in Beijing in China. The show name is "Nature-hearted in painting - Retruning nature". The painters and artists: Zhengxin Liu, Chen Ma, Shilong Wei, Chongwen Yu. ▷▷▷▷</p></a>
        </div>
      </div>
-   </div>
-     <div class="row">
      <div class="column">
        <div class="content">
          <a href="huangwei-html/index.html">
@@ -135,6 +145,8 @@
          2011, Graduated from The Department of Chinese Painting of Tianjin Academy of Fine Arts with a bachelor's degree...▷▷▷▷</p></a>
        </div>
      </div>
+        </div>
+        <div class="row">
      <div class="column">
        <div class="content">
          <a href="synopticoffice-html/index.html">
@@ -153,6 +165,8 @@
            Ava Roth is a Toronto-based encaustic painter, embroiderer and mixed-media artist. Roth’s current work brings together techniques from the discrete worlds of fine art and crafts...▷▷▷▷</p></a>
        </div>
      </div>
+    </div>
+    <div class="row">
      <div class="column">
        <div class="content">
          <a href="splopdesign-html/index.html">
@@ -162,16 +176,13 @@
            Splop Design features and sells handcrafted wearable art and jewelry created by upcoming emerging artists of today.▷▷▷▷</p></a>
        </div>
      </div>
-
-   </div>
-   <div class="row">
    <div class="column">
      <div class="content">
        <a href="braulio-html/index.html">
        <img src="slide01.jpg" style="width:100%">
        <h3>现实与虚拟的视觉转化 | Braulio Amado 「艺术访谈」</h3>
        <p class="chinese">Bráulio Amado<br>
-        Bráulio Amado is a Graphic Designer and Illustrator from Portugal, currently living in New York City. He worked as a Designer at Pentagram NYC. Then joined Bloomberg Businessweek as an Art Director. Moved to Wieden+Kennedy. Then started his own studio in 2017. Since 2018 he co-runs SSHH, a mutant art space, classroom and store in the East Village of NYC.▷▷▷▷</p></a>
+        Bráulio Amado is a Graphic Designer and Illustrator from Portugal, currently living in New York City. He worked as a Designer at Pentagram NYC. Then joined Bloomberg Businessweek as an Art Director.▷▷▷▷</p></a>
      </div>
    </div>
    <div class="column">
@@ -183,9 +194,6 @@
       Born 1987, US. Lives and works in Richmond, VA, US. Jason S. Wright’s work is an exploration of the parallels found within the creative practice and spiritual practice. A symbiotic bond that is constantly leading to new discoveries as he searches through media, material, and the psyche... ▷▷▷▷</p></a>
      </div>
    </div>
- </div>
-</div>
- <div class="row">
  <div class="column">
    <div class="content">
      <a href="yuyezhang-html/index.html">
@@ -195,6 +203,9 @@
       Yuye Zhang is an international student from Suzhou, China. She is now in the 2nd year MFA program of Metal/Jewelry/CAD-CAM at Temple University Tyler School of Art & Architecture. Her contemporary jewelry work is frequently using 3D modeling and 3D printing technique...▷▷▷▷</p></a>
    </div>
  </div>
+       </div>
+  </div>
+  <div class="row">
  <div class="column">
    <div class="content">
      <a href="zhengluoyu-html/index.html">
@@ -214,6 +225,8 @@
      <p class="chinese">She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. ▷▷▷▷</p></a>
    </div>
  </div>
+  </div>
+    <div class="row">
  <div class="column">
    <div class="content">
    <a href="eric-html/index.html">
@@ -223,8 +236,6 @@
      The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy... ▷▷▷▷</p></a>
    </div>
  </div>
-</div>
-<div class="row">
 <div class="column">
   <div class="content">
     <a href="xuewu-html/index.html">
@@ -235,6 +246,8 @@
    </p></a>
   </div>
 </div>
+</div>
+<div class="row">
 <div class="column">
   <div class="content">
   <a href="SorinStudio-html/index.html">
@@ -243,10 +256,6 @@
     <p class="chinese">"Retro is a kind of mark, constantly reappearing, but forgets the essence of retro: discontent with reality.The future recast from the past and the present. Restoring ancient ways, remolding from the old times and the new century.Break the old ways with the old ways.To discover, to deny, to reconstruct.The accumulation of history is profound in restoring ancient ways, and the creation of the future is bursting out in restoring ancient ways.So that's SOARIN."▷▷▷▷</p></a>
   </div>
 </div>
-</div>
-
-
-<div class="row">
 <div class="column">
   <div class="content">
     <a href="ChinoAmobi-html/index.html">
