--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -151,6 +151,11 @@
 <img class="titlelogo" src="suyu-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="jiyu-flower.gif">
+</div>
+</div>
 
 </div>
 
