--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
 <div class="row">
   <div class="column">
     <div class="content">
+      <a href="taylor-html/index.html">
+      <img src="taylor-title.jpg" style="width:100%">
+      <h3>她用布料编织疼痛 | Taylor Simone 「艺术访谈」</h3>
+      <p class="chinese">Taylor Simone<br>
+      Taylor Simone is an interdisciplinary artist from Metro Detroit and resides in Toledo, Ohio. Her practice centralizes around space making. Taylor is the found of Exodus: School of expression...▷▷▷▷</p></a>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
       <a href="jiyu-html/index.html">
       <img src="jiyu-title.jpg" style="width:100%">
       <h3>她把世界定址在了陶瓷上 | Jiyu An 「艺术访谈」</h3>
