--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -156,6 +156,11 @@
 <img class="titlelogo" src="jiyu-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="taylor-flower.gif">
+</div>
+</div>
 
 </div>
 
