ben dory update

--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
 <div class="row">
   <div class="column">
     <div class="content">
+      <a href="bendory-html/index.html">
+      <img src="bendory-title.jpg" style="width:100%">
+      <h3>高级平替 - 不锈钢的维多利亚时代 | Ben Dory 「艺术访谈」</h3>
+      <p class="chinese">Ben Dory<br>
+      Ben Dory is an artist and metalsmith originally from Kansas City, KS. Dory received his BFA in Metalsmithing /Jewelry from the University of Kansas and his MFA in Metalsmithing from Southern Illinois University Carbondale in 2014...▷▷▷▷</p></a>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
       <a href="taylor-html/index.html">
       <img src="taylor-title.jpg" style="width:100%">
       <h3>她用布料编织疼痛 | Taylor Simone 「艺术访谈」</h3>
