--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -161,7 +161,11 @@
 <img class="titlelogo" src="taylor-flower.gif">
 </div>
 </div>
-
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="benbory-flower.gif">
+</div>
+</div>
 </div>
 
 
