--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
   <hr>
 <br><br><br><br>
    <div class="text">
-   <img class="mySlides" src="deniz-title.jpg" style="width:100%">
-   <img class="mySlides" src="slide05.jpg" style="width:100%">
+   <img class="mySlides" src="bendory-title.jpg" style="width:100%">
+   <img class="mySlides" src="suyu-title.jpg" style="width:100%">
+   <img class="mySlides" src="taylor-title.jpg" style="width:100%">
    <img class="mySlides" src="pixyliao-05.jpg" style="width:100%">
-   <img class="mySlides" src="slide04.jpg" style="width:100%">
+   <img class="mySlides" src="merani-title.jpg" style="width:100%">
 </div>
 <br><br>
 <p class="text">BE THE ONE</p>
@@ -46,12 +47,12 @@
    <hr>
    <p class="chinese">Here are a few quick links to our newest updated Artist and Designer interview article.</p>
    <p class="chinese">///快来看看我们最近更新的采访文章吧～///</p><br>
-   <p class="chinese"><a href="deniz-html/index.html">➥ 重叠交错的平面与潜意识 | Deniz Kazma 「艺术访谈」--- 2021.03.05</p></a>
-   <p class="chinese"><a href="wenjing-html/index.html">➥ 聊聊艺术的“那几个点” | 周雯静 「艺术访谈」--- 2021.02.27</p></a>
+   <p class="chinese"><a href="bendory-html/index.html">➥ 高级平替-不锈钢的维多利亚时代 | Ben Dory 「艺术访谈」--- 2021.05.13</p></a>
+   <p class="chinese"><a href="taylor-html/index.html">➥ 她用布料编织疼痛 | Taylor Simone 「艺术访谈」--- 2021.05.04</p></a>
+   <p class="chinese"><a href="suyu-html/index.html">➥ 当代首饰的可持续发展 | 陈素雨 Suyu Chen「艺术访谈」--- 2021.04.19</p></a>
+   <p class="chinese"><a href="lois-html/index.html">➥ 信息拼贴带来的真实与虚幻 | Lois Notebaart 「艺术访谈」--- 2021.03.21</p></a>
    <p class="chinese"><a href="pixy-html/index.html">➥ 什么？神仙爱情？| Pixy Liao 「艺术访谈」--- 2021.02.14</p></a>
-   <p class="chinese"><a href="braulio-html/index.html">➥ 现实与虚拟的视觉转化 | Braulio Amado 「艺术访谈」--- 2020.10.27</p></a>
-   <p class="chinese"><a href="splopdesign-html/index.html">➥ 线上珠宝展竟是盲盒❗️❓| Splop Design 「艺术访谈」--- 2020.10.19</p></a>
-   <p class="chinese"><a href="synopticoffice-html/index.html">➥ 跨文化下的字体设计 | Synoptic Office 「艺术访谈」--- 2020.09.29</p></a>
+   <p class="chinese"><a href="wenjing-html/index.html">➥ 聊聊艺术的“那几个点” | 周雯静 「艺术访谈」--- 2021.02.28</p></a>
 
 
    <br><br><br><br><br><br><br><br><br><br><br><br>
