--- a/home.html
+++ b/home.html
@@ -28,7 +28,16 @@
    <img class="titlelogo" src="MUYA logo-19.jpg">
    </div>
    <br>
-<div class="row">
+   <div class="row">
+     <div class="column">
+       <div class="content">
+         <a href="john-html/index.html">
+         <img src="john-title.jpg" style="width:100%">
+         <h3>充满童趣的首饰，埋藏内心的柔软 | John Sullivan 「艺术访谈」</h3>
+         <p class="chinese">John Sullivan<br>
+         John Sullivan is an artist, metalsmith, jeweler, and educator, whose work focuses on psychology, neuropsychology, interpersonal relationships, and theories of play...▷▷▷▷</p></a>
+       </div>
+     </div>
   <div class="column">
     <div class="content">
       <a href="bendory-html/index.html">
@@ -60,7 +69,7 @@
     <div class="content">
       <a href="suyu-html/index.html">
       <img src="suyu-title.jpg" style="width:100%">
-      <h3>当代首饰的可持续发展 | 陈素雨 Suyu Chen「艺术访谈」</h3>
+      <h3>当代首饰的可持续发展 | 陈素雨「艺术访谈」</h3>
       <p class="chinese">陈素雨 Suyu Chen<br>
       Suyu Chen, born in Guangzhou, graduated from Guangzhou Academy of Fine Arts with a bachelor's degree and from the Department of Metalworking and Jewelry of Rochester Institute of Technology with a master's degree...▷▷▷▷</p></a>
     </div>
@@ -81,7 +90,7 @@
       <img src="lois-title.jpg" style="width:100%">
       <h3>信息拼贴带来的真实与虚幻 | Lois Notebaart 「艺术访谈」</h3>
       <p class="chinese">Lois Notebaart<br>
-      My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up. Currently based in Amsterdam, The Netherlands...▷▷▷▷</p></a>
+      My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up...▷▷▷▷</p></a>
     </div>
   </div>
   </div>
