--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -166,6 +166,11 @@
 <img class="titlelogo" src="benbory-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="john-flower.gif">
+</div>
+</div>
 </div>
 
 
