junyao zhang article update

--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -171,6 +171,11 @@
 <img class="titlelogo" src="john-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="junyao-flower.gif">
+</div>
+</div>
 </div>
 
 
