--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
    <div class="row">
      <div class="column">
        <div class="content">
+         <a href="junyao-html/index.html">
+         <img src="junyao-title.jpg" style="width:100%">
+         <h3>我是谁？我在哪？ - 中国酷儿 | 张钧尧 Junyao Zhang 「艺术访谈」</h3>
+         <p class="chinese">Junyao Zhang<br>
+         Alejandro Junyao Zhang (born in 1995 in Yulin Guangxi China, currently in Minneapolis, MN) is an interdisciplinary artist who builds relationships between performance...▷▷▷▷</p></a>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
          <a href="john-html/index.html">
          <img src="john-title.jpg" style="width:100%">
          <h3>充满童趣的首饰，埋藏内心的柔软 | John Sullivan 「艺术访谈」</h3>
