ariel li update

--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
    <div class="row">
      <div class="column">
        <div class="content">
+         <a href="arielli-html/index.html">
+         <img src="xinrui-title.jpg" style="width:100%">
+         <h3>“扒皮”艺术中的虚无空间 | 李欣芮 xinrui Li 「艺术访谈」</h3>
+         <p class="chinese">Ariel Li<br>
+         Li Xinrui, graduated from the university of the arts London Chelsea college, at present for the royal college of art, interior design graduate students...▷▷▷▷</p></a>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
          <a href="junyao-html/index.html">
          <img src="junyao-title.jpg" style="width:100%">
          <h3>我是谁？我在哪？ - 中国酷儿 | 张钧尧 Junyao Zhang 「艺术访谈」</h3>
@@ -103,7 +112,6 @@
     </div>
   </div>
   </div>
-    <div class="row">
   <div class="column">
     <div class="content">
       <a href="deniz-html/index.html">
@@ -113,6 +121,7 @@
        Deniz Kazma is a Turkish, Belgian artist based in Brussels. She received her MFA in graphic design in Istanbul, this training and being able to work as a design professional for many years helped her use her intuitions and develop her skills as a self-taught artist.▷▷▷▷</p></a>
     </div>
     </div>
+        <div class="row">
      <div class="column">
        <div class="content">
          <a href="wenjing-html/index.html">
