--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -176,6 +176,11 @@
 <img class="titlelogo" src="junyao-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="xinrui-flower.gif">
+</div>
+</div>
 </div>
 
 
