--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
    <div class="row">
      <div class="column">
        <div class="content">
+         <a href="angelzhang-html/index.html">
+         <img src="angelzhang-title.jpg" style="width:100%">
+         <h3>银色精灵与危险之物 | Angel Zhang 「艺术访谈」</h3>
+         <p class="chinese">Angel Zhang<br>
+         Angel Zhang is a jewelry designer who was born and raised in Windhoek, Namibia. ...▷▷▷▷</p></a>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
          <a href="arielli-html/index.html">
          <img src="xinrui-title.jpg" style="width:100%">
          <h3>“扒皮”艺术中的虚无空间 | 李欣芮 xinrui Li 「艺术访谈」</h3>
@@ -74,6 +83,8 @@
       Taylor Simone is an interdisciplinary artist from Metro Detroit and resides in Toledo, Ohio. Her practice centralizes around space making. Taylor is the found of Exodus: School of expression...▷▷▷▷</p></a>
     </div>
   </div>
+  </div>
+  <div class="row">
   <div class="column">
     <div class="content">
       <a href="jiyu-html/index.html">
@@ -230,6 +241,8 @@
         Bráulio Amado is a Graphic Designer and Illustrator from Portugal, currently living in New York City. He worked as a Designer at Pentagram NYC. Then joined Bloomberg Businessweek as an Art Director.▷▷▷▷</p></a>
      </div>
    </div>
+</div>
+   <div class="row">
    <div class="column">
      <div class="content">
        <a href="jason-html/index.html">
@@ -266,7 +279,7 @@
    <div class="content">
      <a href="shiyouzhong-html/index.html">
      <img src="youzhong-title.jpg" style="width:100%">
-     <h3>明暗之间看见色彩 | 施又中 SHI YOUZHONG 「艺术访谈」</h3>
+     <h3>明暗之间看见色彩 | 施又中 Shi Youzhong 「艺术访谈」</h3>
      <p class="chinese">She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. ▷▷▷▷</p></a>
    </div>
  </div>
