--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -181,6 +181,11 @@
 <img class="titlelogo" src="xinrui-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="angel-flower.gif">
+</div>
+</div>
 </div>
 
 
